# test-parallel-runner

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_processing.yml
data/01_raw/: simple_data.parquet
notebooks/: temp.ipynb
src/test_parallel_runner/: __init__.py  __main__.py  settings.py
src/test_parallel_runner/pipelines/data_processing/: nodes.py  pipeline.py
